# VocabDef

./: README.md  csv2rdf.spec  pyproject.toml  turtle
src/: csv2rdf.py
src/csv2rdf/: __init__.py  __main__.py  _version.py  csv2rdfConverter.py  parseArguments.py
src/csv2rdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_csv2rdfConverter.py
tests/data/: concepts.csv  concepts.ttl  namespaces.csv  terms.csv  terms.ttl
