[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "csv2rdf._version.__version__"}

[project]
name = "csv2rdf"
dynamic = ["version"]
description = "Creates an RDF/S (+just enough OWL) vocabulary definition file based on a CSV file."
readme = "README.md"
authors = [{name = "Phil Barker", email="phil.barker@pjjk.co.uk"}]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Ontologists",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
]
keywords = ["RDF", "metadata application profile", "SHACL"]
dependencies = [
    "rdflib >=7.0.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest >= 6.2",
    "black >= 21.6b0",
    "pytest-black >= 0.3.12",
    "pyinstaller >= 5.4"
]

[project.scripts]
csv2rdf = "csv2rdf.__main__:main"
